--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1862,6 +1855,125 @@
    "source": [
     "### Model Evaluation\n",
     "Evaluate the model's performance using appropriate metrics such as Mean Squared Error (MSE), R-squared score, or Mean Absolute Error (MAE)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Summary of model scores from different metrics\n",
+    "KNN_model = KNN_MAE,KNN_MSE,KNN_RMSE,KNN_R2_score\n",
+    "RF_model = RF_MAE,RF_MSE,RF_RMSE,RF_R2_score\n",
+    "DT_model = DT_MAE,DT_MSE,DT_RMSE,DT_R2_score\n",
+    "MLP_model = MLP_MAE,MLP_MSE,MLP_RMSE,MLP_R2_score\n",
+    "\n",
+    "summary = pd.DataFrame([KNN_model,RF_model,DT_model,MLP_model],\n",
+    "                       index = ['KNN','RF','DT','MLP'], \n",
+    "                       columns = ['MAE','MSE','RMSE','R2_score'])\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,10))\n",
+    "plt.barh(width = summary['MAE'], y = summary.index)\n",
+    "plt.xlabel(\"Mean Absolute Error [MT]\")\n",
+    "plt.ylabel(\"Models\")\n",
+    "plt.title(\"Mean absolute error of models [MT]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,10))\n",
+    "plt.barh(width = summary['MSE'], y = summary.index)\n",
+    "plt.xlabel(\"Mean Squared Error [MT]\")\n",
+    "plt.ylabel(\"Models\")\n",
+    "plt.title(\"Mean Squared Error of models [MT]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,10))\n",
+    "plt.barh(width = summary['RMSE'], y = summary.index)\n",
+    "plt.xlabel(\"Root Mean Squared Error [MT]\")\n",
+    "plt.ylabel(\"Models\")\n",
+    "plt.title(\"Root Mean Squared Error of models [MT]\")\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,10))\n",
+    "plt.barh(width = summary['R2_score'], y = summary.index)\n",
+    "plt.xlabel(\"R2 Score of models\")\n",
+    "plt.ylabel(\"Models\")\n",
+    "plt.title(\"Accuracy of models\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making forecast for the next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making forecast for next timeframe\n",
+    "year = ['2021','2022','2023']\n",
+    "MLP_fcast = model.predict(y_test)\n",
+    "MLP_fcast = pd.DataFrame(scaler.inverse_transform(MLP_fcast)).T\n",
+    "MLP_fcast['year'] = pd.to_datetime(year)\n",
+    "MLP_fcast = MLP_fcast.set_index('year')\n",
+    "\n",
+    "CNN_fcast = model1.predict(y_test)\n",
+    "CNN_fcast = pd.DataFrame(scaler.inverse_transform(CNN_fcast)).T\n",
+    "CNN_fcast['year'] = pd.to_datetime(year)\n",
+    "CNN_fcast = CNN_fcast.set_index('year')\n",
+    "\n",
+    "LSTM_fcast = model2.predict(y_test)\n",
+    "LSTM_fcast = LSTM_fcast.reshape(LSTM_fcast.shape[0], LSTM_fcast.shape[1])\n",
+    "LSTM_fcast = pd.DataFrame(scaler.inverse_transform(LSTM_fcast)).T\n",
+    "LSTM_fcast['year'] = pd.to_datetime(year)\n",
+    "LSTM_fcast = LSTM_fcast.set_index('year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "#plt.plot(UK_data, marker=\"o\", color=\"blue\")\n",
+    "(line1,) = plt.plot(MLP_fcast, marker=\"o\", color=\"blue\")\n",
+    "(line2,) = plt.plot(CNN_fcast, marker=\"o\", color=\"red\")\n",
+    "(line3,) = plt.plot(LSTM_fcast, marker=\"o\", color=\"green\")\n",
+    "plt.legend([line1, line2, line3], [\"MLP forecast\", \"CNN forecast\", 'LSTM forcast'])\n",
+    "plt.title('Co2 forecast for next three years (Neural Network models)')\n",
+    "plt.show()"
    ]
   }
  ],
